2012-08-18  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: make profiles panel a lazily loaded module.
        https://bugs.webkit.org/show_bug.cgi?id=94351

        Reviewed by Yury Semikhatsky.

        * inspector/profiler/heap-snapshot-inspect-dom-wrapper.html:
        * inspector/profiler/heap-snapshot-loader.html:
        * inspector/profiler/heap-snapshot-summary-show-ranges.html:
        * inspector/profiler/heap-snapshot-summary-shown-node-count-preserved-when-sorting.html:

2012-08-18  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: load panels code on demand
        https://bugs.webkit.org/show_bug.cgi?id=94326

        Reviewed by Vsevolod Vlasov.

        Showing panels prior to running tests in order to load the code for them.

        * http/tests/inspector/resource-tree/resource-tree-non-unique-url.html:
        * inspector/database-table-name-excaping.html:
        * inspector/styles/styles-invalid-color-values.html:
        * inspector/timeline-dfs.html:

2012-08-17  Keishi Hattori  <keishi@webkit.org>

        Calendar picker shows wrong date when input element has year earlier than 100
        https://bugs.webkit.org/show_bug.cgi?id=94100

        Reviewed by Kent Tamura.

        * fast/forms/date/calendar-picker-appearance-pre-100-expected.txt: Added.
        * fast/forms/date/calendar-picker-appearance-pre-100.html: Added.

2012-08-17  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, rolling out r125897.
        http://trac.webkit.org/changeset/125897
        https://bugs.webkit.org/show_bug.cgi?id=94326

        This patch seems to have broken the inspector on the apple mac bots.

        * http/tests/inspector/resource-tree/resource-tree-non-unique-url.html:
        * inspector/database-table-name-excaping.html:
        * inspector/styles/styles-invalid-color-values.html:
        * inspector/timeline-dfs.html:

2012-08-17  Alice Cheng  <alice_cheng@apple.com>
